--- a/lithuania.css
+++ b/lithuania.css
@@ -3,6 +3,30 @@
 	
 }
 
+li a {
+	text-decoration: none;
+	color: dodgerblue;
+}
+
+li a:visited {
+    color: dodgerblue;
+    background-color: transparent;
+    text-decoration: none;
+}
+li a:hover {
+    color: blue;
+    background-color: transparent;
+    text-decoration: none;
+}
+li a:active {
+    color: red;
+    background-color: transparent;
+    text-decoration: underline;
+}
+
+
+
+
 body {
 	background-color: #FFFAFA;
 	margin-right: 100px;
@@ -14,6 +38,34 @@ body {
 	z-index: 10;
 	
 }
+
+ul {
+	position: fixed;
+	left: 5px;
+	top: 100px;
+	z-index:11;
+	
+	padding: 20px;
+	text-align: center;
+	background-color: white;
+	border-bottom: solid;
+	border-bottom-color: lightblue;
+	border-right: solid;
+	border-right-color: lightblue;
+	opacity: 1;
+	border-radius: 50px;
+}
+
+li {
+	
+	line-height: 50px;
+	opacity: 1;
+	font-size: 16px;
+	font-weight: bold;
+	color: dodgerblue;
+	
+}
+
 
 .header h1 {
 	margin-bottom: 70px;
