--- a/style.css
+++ b/style.css
@@ -121,12 +121,10 @@ li {
 	width: 50px;
 	height: 50px;
 	margin: 0;
+	bottom: 10px;
 	
 }
-.ftext {
-	
-	text-align: center;
-}
+
 .footer p {
 	font-weight: bold;
 	font-size: 20;
