--- a/lithuania.css
+++ b/lithuania.css
@@ -2,6 +2,7 @@
 	margin: 0;
 	
 }
+
 a {
 	
 	color: black;
@@ -43,15 +44,14 @@ body {
 	z-index: 10;
 	
 }
-
-ul {
+.nav {
 	position: fixed;
 	left: 5px;
 	top: 100px;
 	z-index:11;
 	
 	padding: 20px;
-	text-align: center;
+	text-align: left;
 	background-color: white;
 	border-bottom: solid;
 	border-bottom-color: lightblue;
@@ -59,6 +59,8 @@ ul {
 	border-right-color: lightblue;
 	opacity: 1;
 	border-radius: 50px;
+	width: 130px;
+	
 }
 
 li {
@@ -98,7 +100,7 @@ li {
 	width: 500px;
 	margin-top: 20px;
 	margin-bottom: 10px;
-	margin-left: 60px;
+	margin-left: 80px;
 	font-size: 20px;
 	line-height: 40px;
 	letter-spacing: 1.4;
@@ -126,7 +128,7 @@ li {
 	border-bottom-color: lightblue;
 	
 	float: left;
-	margin-left: 60px;
+	margin-left: 80px;
 	font-size: 20px;			/* TRANSITION */
 	line-height: 30px;
 	letter-spacing: 1.4;
@@ -152,7 +154,7 @@ li {
     padding-bottom: 5px;
 	padding-right: 5px;
     margin-bottom: 5px;
-	margin-left: 60px;
+	margin-left: 80px;
 	background-color: hsla(0,0%,0%, 0.2);
 	border-radius: 30px;
 }
@@ -166,7 +168,7 @@ li {
 	border-left-color: lightblue;
 	
 	float: left;
-	margin-left: 60px;
+	margin-left: 80px;
 	font-size: 20px;			/* TRANSITION */
 	line-height: 30px;
 	letter-spacing: 1.4;
@@ -179,7 +181,7 @@ li {
 	
 	float: left;
 	width: 500px;
-	margin-left: 60px;
+	margin-left: 80px;
 	font-size: 20px;
 	line-height: 40px;
 	letter-spacing: 1.4;
@@ -209,7 +211,7 @@ li {
 	
 	
 	float: left;
-	margin-left: 60px;
+	margin-left: 80px;
 	font-size: 20px;			/* TRANSITION */
 	line-height: 30px;
 	letter-spacing: 1.4;
@@ -236,7 +238,7 @@ li {
     padding-bottom: 5px;
 	padding-right: 5px;
     margin-bottom: 5px;
-	margin-left: 60px;
+	margin-left: 80px;
 	background-color: hsla(0,0%,0%, 0.2);
 	border-radius: 30px;
 }
